--- a/lib/libft/Makefile
+++ b/lib/libft/Makefile
@@ -14,7 +14,8 @@ ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c \
 ft_putendl_fd.c ft_putnbr_fd.c get_next_line_bonus.c \
 ft_lstnew_bonus.c ft_lstadd_front_bonus.c ft_lstsize_bonus.c \
 ft_lstlast_bonus.c ft_lstadd_back_bonus.c ft_lstdelone_bonus.c \
-ft_lstclear_bonus.c ft_lstiter_bonus.c ft_lstmap_bonus.c
+ft_lstclear_bonus.c ft_lstiter_bonus.c ft_lstmap_bonus.c \
+ft_abs.c
 OBJ_DIR := objects
 OBJECTS := $(addprefix $(OBJ_DIR)/, $(SOURCES:.c=.o))
 PRINTF_OBJ_DIR := ft_printf/objects
